// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Span snapshot 1`] = `
<div>
  <span
    class=""
  >
    when the cheese comes out everybody's happy
  </span>
</div>
`;

exports[`component: Text snapshot 1`] = `
<div>
  <p
    class=""
  >
    Red leicester mascarpone cauliflower cheese. Cauliflower cheese bavarian bergkase mozzarella parmesan stinking bishop hard cheese.
  </p>
</div>
`;
